// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing CredentialsWelcome component should snapshot works with english language 1`] = `
<div>
  <div
    class="MuiPaper-root Component-root Component-root MuiPaper-elevation1 MuiPaper-rounded"
    data-testid="paper-credentials-welcome"
  >
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap MuiTypography-alignCenter"
    >
      Hi, testecrudcredential.
    </p>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
    >
      Thanks for signing in. We are very happy to have you among us.
    </p>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
    >
      Next step, you must add a credential.
       
      <span
        class="MuiTypography-root Component-root Component-root MuiTypography-body1"
      >
        Credential is the name we call every password you add and save here with us.
      </span>
    </p>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
    >
      To start enjoying all the benefits of using PassMonki click on the button bellow and add your first credential.
    </p>
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root MuiTypography-colorPrimary"
      data-testid="button-new-credential"
      href="/front/new_credential"
      title="Create credential"
    >
      <img
        alt="Create credential"
        class="img-root img-root"
        src=""
      />
    </a>
  </div>
</div>
`;

exports[`testing CredentialsWelcome component should snapshot works with portuguese language 1`] = `
<div>
  <div
    class="MuiPaper-root Component-root Component-root MuiPaper-elevation1 MuiPaper-rounded"
    data-testid="paper-credentials-welcome"
  >
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap MuiTypography-alignCenter"
    >
      Olá, testecrudcredential.
    </p>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
    >
      Obrigado por se cadastrar. Estamos muito felizes em ter você conosco.
    </p>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
    >
      Próximo passo, você deve adicionar uma credencial.
       
      <span
        class="MuiTypography-root Component-root Component-root MuiTypography-body1"
      >
        Credencial é o nome que chamamos cada senha que você adiciona e salva aqui conosco.
      </span>
    </p>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
    >
      Para aproveitar todos os benefícios de usar o PassMonki, aperte o botão abaixo para adicionar sua primeira credencial.
    </p>
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root MuiTypography-colorPrimary"
      data-testid="button-new-credential"
      href="/front/new_credential"
      title="Criar credencial"
    >
      <img
        alt="Criar credencial"
        class="img-root img-root"
        src=""
      />
    </a>
  </div>
</div>
`;

exports[`testing CredentialsWelcome component should snapshot works with spanish language 1`] = `
<div>
  <div
    class="MuiPaper-root Component-root Component-root MuiPaper-elevation1 MuiPaper-rounded"
    data-testid="paper-credentials-welcome"
  >
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap MuiTypography-alignCenter"
    >
      Hola, testecrudcredential.
    </p>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
    >
      Gracias por registrarte. Estamos muy felices de tenerte con nosotros.
    </p>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
    >
      Siguiente paso, debe agregar una credencial.
       
      <span
        class="MuiTypography-root Component-root Component-root MuiTypography-body1"
      >
        Credencial es el nombre que llamamos a cada contraseña que agrega y guarda aquí con nosotros.
      </span>
    </p>
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
    >
      Para disfrutar de todos los beneficios de usar PassMonki, presione el botón a continuación para agregar su primera credencial.
    </p>
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root MuiTypography-colorPrimary"
      data-testid="button-new-credential"
      href="/front/new_credential"
      title="Crear credencial"
    >
      <img
        alt="Crear credencial"
        class="img-root img-root"
        src=""
      />
    </a>
  </div>
</div>
`;
